--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.0",
     "twig": "^1.15.4"
   }
 }
